tests/custom-4.4.2/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-4.4.2-compliant
policies:
  - ../../../kyverno-policies/custom-4.4.2.yaml
resources:
  - secret.yaml
results:
  - policy: custom-4-4-2-external-secret-storage
    rule: check-external-secret-storage
    resources:
      - compliant-secret
    kind: Secret
    result: pass
